--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,8 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.13"
+num-traits = "0.2"
+num-derive = "0.4"
 
 [dev-dependencies]
 xshell.workspace = true
