feat: simple simulator for mov ixs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ edition = "2021"
 itertools = "0.13"
 num-traits = "0.2"
 num-derive = "0.4"
+bytemuck = "1"
 
 [dev-dependencies]
 xshell.workspace = true
